# serverless-task-queue

./: .gitignore  README.md  app.py  handler.py  package-lock.json  package.json  pyproject.toml  serverless.yml
