[tool.poetry]
name = "FastAPI Serverless Example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.83.0"
boto3 = "^1.24.70"
uvicorn = "^0.18.3"
debugpy = "^1.6.3"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
